--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ body #content {
   box-shadow: 11px 7px 18px -3px rgba(66, 68, 90, 0.3);
 }
 
+@media screen and (max-width: 900px) {
+  body #content {
+    width: 80vw;
+  }
+}
+
 body #content #image img {
   width: 100%;
   height: 100%;
