--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,11 @@ html
         width:25vw;
         background-color:white;
         border-radius:30px;
-        box-shadow:11px 7px 18px -3px rgba(66, 68, 90, 0.3);;
+        box-shadow:11px 7px 18px -3px rgba(66, 68, 90, 0.3);
+
+        @media screen and (max-width:900px){
+            width:80vw;
+        }
 
 
         #image
