--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 
     $paleBlue:hsl(225, 100%, 94%);
     $brightBlue:hsl(245, 75%, 52%);
+    $veryBrightBlue:hsl(245, 64%, 61%);
     $veryPaleBlue:hsl(225, 100%, 98%);
     $desaturedBlue:hsl(224, 23%, 55%);
     $darkBlue:hsl(223, 47%, 23%);
@@ -120,18 +121,27 @@ html
                 align-items:center;
                 flex-direction:row;
 
-                #music-icon
-                {
-                    
-                    
-                    margin-right:1vw;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    
-                }
+                    #music-icon
+                    {
+                        
+                        
+                        margin-right:1vw;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        
+                    }
 
                 
+                }
+
+                #change-button:hover
+                {
+                    a
+                    {
+                        color:$veryBrightBlue;
+                        text-decoration:none;
+                    }
                 }
 
             }
@@ -149,6 +159,8 @@ html
                 #blue-button:hover
                 {
                     cursor:pointer;
+                    background-color:$veryBrightBlue;
+                    box-shadow:3px 21px 31px -11px rgba(113, 118, 219, 1);;
                 }
 
                 #blue-button
@@ -163,11 +175,14 @@ html
                     margin-bottom: 2vh;
                     margin-top: 2vh;
                     user-select:none;
+                    transition:0.2s box-shadow ease-in-out;
                 }
 
                 #cancel-button:hover
                 {
                     cursor:pointer;
+                    color:$darkBlue;
+                    font-weight:bolder;
                 }
 
                 #cancel-button
@@ -180,6 +195,7 @@ html
                     border-radius: 10px;
                     margin-bottom: 2vh;
                     user-select:none;
+                    transition:0.1s font-weight ease-in-out;
                 }
               
             }
